[package]
name = "splay-safe-rs"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
compare = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
