[package]
name = "splay-safe-rs"
version = "0.7.12"
edition = "2021"
description = "Splay implemented with safe rust"
license = "MPL-2.0"
repository = "https://github.com/seekstar/splay-safe-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
compare = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
rand-op = "^0.1.0"

[features]
# For backward compatibility
default = ["std"]
std = []
